--- a/style.css
+++ b/style.css
@@ -47,13 +47,30 @@ fieldset {
 }
 
 .background {
-  background-color: #000;
+  background: #160638;
 }
 input[type=text] {
   border: 2px solid red;
   border-radius: 4px;
   height: 2em;
   font-size: 1.5rem;
+  text-align: center;
+}
+
+input[type=text]:focus {
+  background-color: lightblue;
+}
+
+input[type=number] {
+  border: 2px solid red;
+  border-radius: 4px;
+  height: 2em;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+input[type=number]:focus {
+  background-color: lightblue;
 }
 
 .gender{
@@ -66,11 +83,7 @@ input[type=text] {
   display: inline-block;
 }
 
-input[type=text]:focus {
-  background-color: lightblue;
-}
-
-.button {
+button {
   margin-top: 1.5em;
   display: inline-block;
   text-decoration: none;
@@ -85,11 +98,40 @@ input[type=text]:focus {
   border-style: none;
   cursor: pointer;
 }
-.button:hover {
+button:hover {
   background-image: linear-gradient(
     to right, #FFC2C2,
      #FFD7A8);
      color: #f02aa6;
+}
+
+#result {
+  height: 2.5em;
+  width: 28em;
+
+  margin-top: 1.5em;
+  text-align: center;
+  font-size: 1.5rem;
+  color: #fff;
+  font-weight: 900;
+  background: linear-gradient(#ff6f48, #f02aa6);
+  padding: 1em 1.2em;
+  border-radius: 100px;
+  border-style: none;
+  cursor: pointer;
+}
+
+.result{
+  margin-top: 1.5em;
+  text-align: center;
+  font-size: 1.5rem;
+  color: #fff;
+  font-weight: 900;
+  border: #f02aa6 solid 1px;
+  padding: 1em 1.2em;
+  border-radius: 100px;
+  border-style: none;
+  cursor: pointer;
 }
 
 
